🍳feat: add query options
